# chatbot-aula-ia

./: .env.example  .gitignore  .psqlrc  Dockerfile  aula1-sdk.py  aula2-langchain.py  aula2-sdk.py  aula3-langchain.py  aula4-chat.py  aula4-langchain.py  aula5-chat.py  aula6-agente.py  docker-compose.yml  main.py  makefile  pg_tools.py  pyproject.toml  requirements.txt
db/: .env.example  Dockerfile  docker-compose.yml
db/scripts/: init-db.sql
memoria-permanente/: MongoChatMessageHistory.py  chain.py  db.py  main.py  shots.py
model/: EnvSettings.py
src/: main.py
src/agents/: __init__.py  agenda.py  financial.py  llms.py  orquestrator.py  router.py  temporal_context.py
src/agents/agenda/: __init__.py  agenda_app.py  agenda_prompts.py
src/agents/faq_reader/: __init__.py  faq_reader_app.py  faq_reader_prompts.py
src/agents/financial/: __init__.py  financial_app.py  financial_prompts.py
src/agents/orquestrator/: __init__.py  orquestrator_app.py  orquestrator_prompts.py
src/agents/prompts/: agenda.py  finance.py  general.py  orquestrator.py  router.py
src/agents/router/: __init__.py  router_app.py  router_prompts.py
src/agents/utils/: persona.py
src/infrastructure/: db_connection.py  faiss_store.py  logger.py  md_console.py  paths.py  settings.py
src/model/: env.py
src/model/common/: tool_response.py
src/tools/db/: add_transaction.py  search_transactions.py  total_balance.py  update_transaction.py
tools/db/: __init__.py  add_transaction.py  daily_balance.py  response.py  search_transactions.py  total_balance.py  update_transaction.py
(+13 files in other folders)
